--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="shoping">
 <head>
     <meta charset="UTF-8">
-    <title>购物车</title>
+    <title>购物</title>
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <script src="https://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
